styles.css
body {
  font-family: 'Kanit', sans-serif;
  display: flex;
  justify-content: center;
  align-items: center;
  height: 100vh;
  margin: 0;
  background-color: #f0f0f0;
}

#title{
  display: flex;
  flex-direction: column;
  align-items: center;
  font-size: 2.5em;
  padding: 1rem;
}

.container {
  display: flex;
  flex-direction: column;
  align-items: center;
  background-color: white;
  padding: 1rem 2rem;
  border-radius: 1rem;
  box-shadow: 0 8px 12px rgba(0, 0, 0, 0.25);
  border: 2px solid #666666;
  z-index: 2;
}

#buttons-container {
  display: flex;
  justify-content: space-between;
}


#rulesCard {
  display: none;
  position: fixed;
  z-index: 10;
  
}

h3{
  margin: 0.25rem;
}

h4{
  margin: 0.25rem;
}

ul {
  margin: 0;
  padding: 0;
}



#grid {
  display: grid;
  grid-template-columns: repeat(5, 1fr);
  grid-template-rows: repeat(5, 1fr);
  grid-gap: .5rem;
  width: 300px;
  height: 300px;
  margin-bottom: 2rem;
  padding: 1rem 0rem;
}

.tile {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 100%;
  height: 100%;
  background-color: #dddddd;
  color: black;
  font-size: 1.9rem;
  font-weight: bold;
  border-radius: 0.25rem;
  border: 1px solid #666666;
  box-shadow: 0 2px 3px rgba(0, 0, 0, 0.15);
}

.tile.highlighted {
  background-color: green;
}

.tile.double-highlighted {
  background-color: gold;
}

#score {
  font-size: 1.25rem;
  margin-bottom: 1rem;
  font-weight: bold;
}

.button {
  font-size: 1rem;
  padding: 0.5rem 1rem;
  margin: 1rem;
  background-color: #666666;
  color: white;
  border: none;
  border-radius: 0.5rem;
  cursor: pointer;
}

.button:hover {
  background-color: #333333;
}

@keyframes slide-up {
  from { transform: translateY(100%); }
  to { transform: translateY(0); }
}

@keyframes slide-down {
  from { transform: translateY(-100%); }
  to { transform: translateY(0); }
}

@keyframes slide-left {
  from { transform: translateX(100%); }
  to { transform: translateX(0); }
}

@keyframes slide-right {
  from { transform: translateX(-100%); }
  to { transform: translateX(0); }
}

.tile.animate-up {
  animation: slide-up 0.5s;
}

.tile.animate-down {
  animation: slide-down 0.5s;
}

.tile.animate-left {
  animation: slide-left 0.5s;
}

.tile.animate-right {
  animation: slide-right 0.5s;
}

@keyframes fade-in {
  0% { opacity: 0; }
  100% { opacity: 1; }
}

@keyframes fade-out {
  0% { opacity: 1; }
  100% { opacity: 0; }
}

.tile.fade-in {
  animation: fade-in 0.5s forwards;
}

.tile.fade-out {
  animation: fade-out 0.5s forwards;
}

